react_webviews/src/common/ui/style.scss
/* ... */
@media only screen and (max-width: 600px) {
  .generic-tooltip {
    span {
      width: 270px;
    }
  }
}

.show-loading-animation.rect-shape, .show-loading-animation.round-shape, .show-loading-animation.text-row, .show-loading-animation .rect-shape, .show-loading-animation .round-shape, .show-loading-animation .text-row {
  border-radius: 6px;
  margin-right: 0px !important;
  animation: react-placeholder-pulse 1.0s infinite !important;
}

.rect-shape.show-loading-animation:empty::after {
  content: ".";
  visibility: hidden;
}
.generic-fallback-img {
  background: var(--skelton-color);
  display: flex;
  align-items: center;
  justify-content: center;

  img {
    width: 25% !important;
  }
}

.generic-skelton {
  padding: 20px;
  margin: 20px 0 0 0;
  background: #fff;
  height: 100%;

  .single-full-image-skelton {
    border-radius: 6px;
  }

  .image-and-lines {

    display: flex;
    justify-content: space-between;
    width: -webkit-fill-available;
    margin: 40px 0 0 0;

    .mid-right {
      width: inherit;
      display: flex;
      justify-content: space-between;
      flex-direction: column;
      margin: 0 0 0 20px;
    }
    .mid-left-skelton {
      width: 54px !important;
      height: 54px !important;
      border-radius: 6px;
    }
    .mid-right-skelton1 {
        width: 75% !important;
        height: 25px !important;
        margin-top: 0px !important;
        border-radius: 6px;
    }
    .mid-right-skelton2 {
      width: 100% !important;
      height: 18px !important;
      margin-top: 0px !important;
      border-radius: 6px;
    }
  }

  .two-lines {

    display: flex;
    justify-content: space-between;
    width: -webkit-fill-available;
    margin: 40px 0 0 0;
    flex-direction: column;

    .mid-right {
      width: inherit;
      display: flex;
      justify-content: space-between;
      flex-direction: column;
      margin: 0 0 0 20px;
    }
    .mid-left-skelton {
      width: 50px !important;
      height: 50px !important;
      border-radius: 6px;
    }
    .mid-right-skelton1 {
        width: 100% !important;
        height: 18px !important;
        margin-top: 0px !important;
        border-radius: 6px;
    }
    .mid-right-skelton2 {
      width: 75% !important;
      height: 18px !important;
      margin-top: 10px !important;
      border-radius: 6px;
    }
  }

  .products-listing {
    
    .mid {
      margin: 40px 0 0 0;
    }

  }
}



/**
 * ==============================================
 * Dot Flashing
 * ==============================================
 */

 .dot-flashing-parent {
  min-height: 22px;
  display: flex;
  align-items: center;
 }
 .dot-flashing {
  position: relative;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: #fff;
  color: #fff;
  animation: dotFlashing 1s infinite linear alternate;
  animation-delay: .5s;
}

.dot-flashing::before, .dot-flashing::after {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.dot-flashing::before {
  left: -15px;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: #fff;
  color: #fff;
  animation: dotFlashing 1s infinite alternate;
  animation-delay: 0s;
}

.dot-flashing::after {
  left: 15px;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  background-color: #fff;
  color: #fff;
  animation: dotFlashing 1s infinite alternate;
  animation-delay: 1s;
}

@keyframes dotFlashing {
  0% {
    background-color: #fff;
  }
  50%,
  100% {
    background-color: #119A4B;
    opacity: 0.7;
  }
}


.react-dropdown-select-option-label{
  padding: 2px;
  color: black;
}
.react-dropdown-select-option{
  border: 1px solid #D6D6D6;
  width: fit-content;
  // margin: 6px 2px 2px 0px !important;  
}
.react-dropdown-select-option-remove{
  color: white;
  margin-top: 2px !important;
  margin-right: 2px !important;
  background-color: #D6D6D6;
  border-radius: 60%  !important;
  width: 20px !important;
  height: 20px !important;
}

.react-dropdown-select{
  background: rgba(238, 238, 238, 0.3) !important;
  min-height: 51px !important;
  border: none;
}

.label{
  position: relative;
}

.label2{
  position: absolute;
  font-size: 11px;
  font-weight: normal;
  line-height: 18px;
  top: 5px;
  left: 10px;
}

.css-ge5lft-ReactDropdownSelect{
  border: none !important;
  border-bottom: 1px solid #D6D6D6 !important;
}

.react-dropdown-select-dropdown{
  height : 246px;
}

.react-dropdown-select-item{
  min-height: 41px;
  line-height: 41px;
  color: black !important;
  display: inline-flex;
  align-items: center;
}

.react-dropdown-select-content{  
  font-size: 13px;
  margin-bottom: -20px;
  line-height: 21px;
  font-weight: normal;
  color: #161A2E;
  max-width: 200px;
  height: 33px !important;
  overflow-x: scroll;
  display: inline-flex !important;
  flex-direction: column;
  white-space: nowrap;
}

.react-dropdown-select-dropdown-handle{
  margin-right: 5px !important;
}

.react-dropdown-select-input{
  font-size: 13px !important;
  font-weight: normal;
  line-height: 21px !important;
  color: #161A2E;
  margin-top: 5px;
  margin-left: 5px !important;
}

.react-dropdown-select-dropdown-handle{
  position: absolute;
  left: 250px
}

.react-dropdown-select-clear{
  position: absolute;
  left: 225px;
  color: black !important;
}

.css-s60fer-OptionComponent{
  margin: 3px 0px 0px 5px !important;
}

.css-163mfpo-ItemComponent{
  background-color: white !important;
  color: #767E86 !important;
}

.colorbackground{
  background-color: #EEEEEE;
  color: #161A2E;
}

.css-ge5lft-ReactDropdownSelect:hover{
  border-bottom: 1px solid #D6D6D6 !important;;
}

.css-ge5lft-ReactDropdownSelect:focus-within {
  border-bottom: 1px solid #4F2DA7 !important;
}

.css-v1jrxw-ContentComponent{
  display: inline-block !important;
  margin-left: 5px;
  margin-top: 4px;
}

.css-majisu-InputComponent{
  margin-top: -5px;
}

